Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch master
Changes to be committed:
	modified:   public/stylesheets/file.css
	modified:   public/stylesheets/iconfont/icons.css
	modified:   readme.md
	modified:   routes/main.js
	modified:   views/file.html
	new file:   views/filebackup.html

--- a/public/stylesheets/file.css
+++ b/public/stylesheets/file.css
@@ -164,6 +164,10 @@ body{
     transition: 2s all ease-in-out;
 }
 
+.show{
+    
+}
+
 @media screen and (max-width: 900px){
     #nav{
         width: 90%;
