--- a/views/file.html
+++ b/views/file.html
@@ -1,290 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>局域网传输</title>
-    <link rel='stylesheet' href='/stylesheets/font.css'/>
-    <link rel="stylesheet" href="/stylesheets/file.css">
-    <link rel="stylesheet" id='view' href="/stylesheets/<%= view %>.css">
-    <link rel="stylesheet" href="/stylesheets/iconfont/icons.css">
-    <link rel="stylesheet" href="/stylesheets/upload.css">
-    <link rel="stylesheet" href="/stylesheets/AsyncProgressContainer.css">
-    
-</head>
-
-<body>
-    
-    <script src='/js/iconfont.js'></script>
-    <script src='/js/uploadSetting.js'></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
-
-<!--文件夹显示效果-->
-<!-- test:D:\\All Local Downloads\\MobileFile -->
-
-    <section class="upload-container" style="visibility: hidden;opacity: 1;">
-        <div id="uploadNav">
-            <div id="closeUploadButton" class="closeButton" onclick="showUploadContainer()" style="opacity: 1;">
-                <img src="/images/svg/closeButton.svg">
-            </div>
-        </div>
-        
-        <form action="/upload" id='uploadForm' method='post' encType="multipart/form-data">
-            <!-- 表单中enctype="multipart/form-data"的意思，是设置表单的MIME编码。默认情况，
-这个编码格式是application/x-www-form-urlencoded，不能用于文件上传；
-只有使用了multipart/form-data，才能完整的传递文件数据. -->
-            <div class="drop-zone">
-                <div class="icon-container">
-                    <img src="/images/svg/uploadFile.svg" draggable="false" class="center" alt="File Icon">
-                </div>
-
-                <input type="file" name="Files" id="fileInput" multiple="multiple">
-                <input type='submit' value='Upload!' id="fileUpload">
-
-                <div class="title">Drop your Files here or, <span id="browseBtn">browse</span></div>
-            </div>
-        </form>
-
-        <!-- 进度条 -->
-        <div class="progress-container" style="visibility:hidden;">
-            <!-- 背景进度 -->
-
-            <div class="bg-progress">
-                <!-- 数值变动的进度 -->
-                <div class="inner-container">
-                    <div class="status">Upload</div>
-
-                    <div class="percent-container">
-                        <span class="percentage" id="progressPercent">0%</span>
-                    </div>
-
-                </div>
-                <div class="progress-bar" style="transform: scaleX(0);"></div>
-            </div>
-            
-        </div>
-
-    </section>
-
-
- <div id="nav">
-    <div class="name">kechuan的文件分享页面</div>
-    <div class="toolitem">
-        <div class="Mutlicheck">
-            <img src="/images/svg/Mutlicheck.svg" title="多选">
-        </div>
-
-        <div class="NavUploadProcess" onclick="ShowProgressList()">
-            <img src="/images/svg/uploadProgress.svg" title="上传进度条">
-        </div>
-
-        <div class="DisplaySetting">
-            <img src="/images/svg/moreSetting.svg" title="更多设置">
-        </div>
-        
-    </div>
-
-    <section class="progressChecker" style="visibility: hidden;opacity: 0;">
-        <div id="AsyncProgressContainer">
-            <div class="idle Board">
-                <span style="color: #40404080;">lowcolor text draw.</span>
-            </div>
-
-            <div id="closeProgressButton" class="closeButton" onclick="ShowProgressList()">
-                <img src="/images/svg/closeButton.svg">
-            </div>
-        </div>
-    </section>
-</div>
-
- <!-- TODO:Admin下的删除功能/通过::before ::after实现图片未加载的处理 <br>
- /继承切换视图后的scrollview位置 -->
- <div id="path">
-    <!-- (当前分割符:<%=filepath.split('\\').length-2%> <%=filepath.split('\\')%>) -->
-    <a href="/file" id='menu'>Index🏠</a>
-    <ul>
-        <% for(var i=0; i<= filepath.split('\\').length-2; i++){ %> 
-            <li>
-                <%var array = []; var string = []%>
-
-                <a href="http://<%= dataip %>/fileslist?path=<% for(var j=0; j<=i; j++){%><%array.push(filepath.split('\\')[j])%><%string.push(array);string.join('\\')%><%}%><%=string[i].toString().replace(/\,/g,'\\')%>"><%= array[i] %>                  
-                </a>
-            </li>
-            
-            <div id="text">/</div> 
-        <%}%>
-    </ul>
- </div> 
-<div class="gap"></div>
-
-<div id="list">
-    <div id="status"> 
-        <div class="tiny row-gap"></div>
-        <div id="icon">？</div>
-        <div class="tiny row-gap"></div>
-        <div id="name">名称</div>
-        <div class="full row-gap"></div>
-        <div id="size">大小</div>
-
-    </div>
-    <div id="files">
-
-    <!-- 文件夹显示 -->
-        <ul id='information'>
-            <li id='name'></li>
-            <li id='size'></li>
-        </ul>
-
-        <ul id='dirlist'>
-            <!-- 根据index.js获取的数组长度返回文件列表 -->
-            <% for(var i=0; i<= dirlist.length-1; i++){ %>
-                <div class="dirsection">
-                    <a href="http://<%= dataip %>/fileslist?path=<%= dirlist[i] %>" class="folder" >
-                        <svg class="icons" aria-hidden="true">
-                          <use xlink:href="#directory_md"></use>
-                        </svg>
-
-                        <li class="folder">
-                            <div class="dirname"><%= dirnamelist[i] %></div>
-                            <div class="filesize">—</div>   
-                        </li>
-                    </a>
-                </div>
-            <%}%>
-        </ul>
-
-    <!--文件显示-->
-        <ul id='fileslist'>
-            <% for(var i=0; i<= fileslist.length-1; i++){ %>
-                <div class='filesection'>
-                    <a href="http://<%= dataip %>/filedownload?path=<%= fileslist[i] %>" class="folder"> 
-                        <svg class="icons" aria-hidden="true">
-                            <%var video_fliter = /\.mkv|mp4|flv|webv|m2ts|rmvb$/%>
-                            <%var audio_fliter = /\.mp3|aac|flac|ogg|opus|aiff|alac|cue$/%>
-                            <%var picture_fliter = /\.jpe?g|png|bmp|webp$/%>
-                            <%var compress_fliter = /\.zip|rar|7z|\d{3}$/%>
-                            <%var text_fliter = /\.txt|md|ini|json|cfg$/%>
-
-                            <use xlink:href="
-                                <%if(video_fliter.test(extlist[i])){%>
-                                <%="#ext-video"%>
-                                <%}else if(audio_fliter.test(extlist[i])){%>
-                                <%="#ext-audio"%>
-                                <%}else if(picture_fliter.test(extlist[i])){%>
-                                <%="#ext-picture"%>
-                                <%}else if(text_fliter.test(extlist[i])){%>
-                                <%="#ext-txt"%>
-                                <%}else if(compress_fliter.test(extlist[i])){%>
-                                <%="#ext-compress"%>
-                                <%}else{%>
-                                <%="#ext-unknown"%>
-                                <%}%>">  
-                            </use> 
-                            
-                        </svg>
-
-                        <li class="file"> 
-                            <div class="filename">
-                                <%if(filenamelist[i].length>120){%>
-                                <% var overflow = (filenamelist[i]).slice(0,120) %>
-                                <%= `${overflow}...` %>
-                                
-
-                                <%}else{%>
-                                <%= filenamelist[i] %>
-
-                                <%}%>
-                            </div>
-
-                            <div class="filesize">
-                                <% if(sizelist[i]<1024){ %>
-                                <%= `${sizelist[i]}B` %>
-                                <%}else if(sizelist[i]<Math.pow(1024, 2)){%>
-                                <%= `${(sizelist[i]/1024).toFixed(2)}KB`%>
-                                <%}else if(sizelist[i]<Math.pow(1024, 3)){%>
-                                <%= `${(sizelist[i]/Math.pow(1024, 2)).toFixed(2)}MB`%>
-                                <%}else{%>
-                                <%= `${(sizelist[i]/Math.pow(1024, 3)).toFixed(2)}GB`%>
-                                <%}%>
-
-                            </div>
-                        </li>
-                    </a>
-                </div>
-           
-            <%}%>
-        </ul>
-
-        <div class="gap"></div>
-
-    </div>
-</div>
-
-
-<!-- #ext-video -->
-<div id="setting" style="visibility:hidden;">
-    <div id="viewSetting">
-        <a href="/view/<% if(view=="gridview"){%><%="listview"%><%}else{%><%="gridview"%><%}%>">
-            <div class='button_BG'>
-                <div id="grid_view">
-                    <img src="/images/svg/gridview.svg"></img>
-                </div>
-                
-                <div id="list_view">
-                    <img src="/images/svg/listview.svg"></img>
-                </div>
-            </div>
-        </a>
-    </div>
-
-    <div id="uploadSetting" onclick="showUploadContainer()">
-        <a>
-            <div class='button_BG' id='uploadButton'>
-                <img src="/images/svg/uploadButton.svg">
-            </div>
-        </a>
-    </div>
-</div>
-
-
-图标展示框
-<svg class="show" aria-hidden="true">
-  <use xlink:href="#ext-video"></use>
-</svg>
-
-<svg class="show" aria-hidden="true">
-  <use xlink:href="#ext-txt"></use>
-</svg>
-
-<svg class="show" aria-hidden="true">
-  <use xlink:href="#ext-xls"></use>
-</svg>
-
-<svg class="show" aria-hidden="true">
-  <use xlink:href="#ext-ppt"></use>
-</svg>
-
-<svg class="show" aria-hidden="true">
-  <use xlink:href="#ext-picture"></use>
-</svg>
-
-<svg class="show" aria-hidden="true">
-  <use xlink:href="#ext-compress"></use>
-</svg>
-
-<svg class="show" aria-hidden="true">
-  <use xlink:href="#ext-unknown"></use>
-</svg>
-
-<svg class="show" aria-hidden="true">
-  <use xlink:href="#directory"></use>
-</svg>
-
-<svg class="show" aria-hidden="true">
-  <use xlink:href="#directory_md"></use>
-</svg>
-
-
-<div class="FooterToast" style="visibility:hidden;bottom: 20%;">Sample message</div>
-
-</body>
-</html>
+<!DOCTYPE html><html><head><title>局域网传输</title><link rel='stylesheet'href='/stylesheets/font.css'/><link rel="stylesheet"href="/stylesheets/file.css"><link rel="stylesheet"id='view'href="/stylesheets/<%= view %>.css"><link rel="stylesheet"href="/stylesheets/iconfont/icons.css"><link rel="stylesheet"href="/stylesheets/upload.css"><link rel="stylesheet"href="/stylesheets/AsyncProgressContainer.css"></head><body><script src='/js/iconfont.js'></script><script src='/js/uploadSetting.js'></script><script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script><section class="upload-container"style="visibility: hidden;opacity: 1;"><div id="uploadNav"><div id="closeUploadButton"class="closeButton"onclick="showUploadContainer()"style="opacity: 1;"><img src="/images/svg/closeButton.svg"></div></div><form action="/upload"id='uploadForm'method='post'encType="multipart/form-data"><div class="drop-zone"><div class="icon-container"><img src="/images/svg/uploadFile.svg"draggable="false"class="center"alt="File Icon"></div><input type="file"name="Files"id="fileInput"multiple="multiple"><input type='submit'value='Upload!'id="fileUpload"><div class="title">Drop your Files here or,<span id="browseBtn">browse</span></div></div></form><div class="progress-container"style="visibility:hidden;"><div class="bg-progress"><div class="inner-container"><div class="status">Upload</div><div class="percent-container"><span class="percentage"id="progressPercent">0%</span></div></div><div class="progress-bar"style="transform: scaleX(0);"></div></div></div></section><div id="nav"><div class="name">kechuan的文件分享页面</div><div class="toolitem"><div class="Mutlicheck"><img src="/images/svg/Mutlicheck.svg"title="多选"></div><div class="NavUploadProcess"onclick="ShowProgressList()"><img src="/images/svg/uploadProgress.svg"title="上传进度条"></div><div class="DisplaySetting"><img src="/images/svg/moreSetting.svg"title="更多设置"></div></div><section class="progressChecker"style="visibility: hidden;opacity: 0;"><div id="AsyncProgressContainer"><div class="idle Board"><span style="color: #40404080;">lowcolor text draw.</span></div><div id="closeProgressButton"class="closeButton"onclick="ShowProgressList()"><img src="/images/svg/closeButton.svg"></div></div></section></div>/继承切换视图后的scrollview位置--><div id="path"><a href="/file"id='menu'>Index🏠</a><ul><%for(var i=0;i<=filepath.split('\\').length-2;i++){%><li><%var array=[];var string=[]%><a href="http://<%= dataip %>/fileslist?path=<% for(var j=0; j<=i; j++){%><%array.push(filepath.split('\\')[j])%><%string.push(array);string.join('\\')%><%}%><%=string[i].toString().replace(/\,/g,'\\')%>"><%=array[i]%></a></li><div id="text">/</div><%}%></ul></div><div class="gap"></div><div id="list"><div id="status"><div class="tiny row-gap"></div><div id="icon">?</div><div class="tiny row-gap"></div><div id="name">名称</div><div class="full row-gap"></div><div id="size">大小</div></div><div id="files"><ul id='information'><li id='name'></li><li id='size'></li></ul><ul id='dirlist'><%for(var i=0;i<=dirlist.length-1;i++){%><div class="dirsection"><a href="http://<%= dataip %>/fileslist?path=<%= encodeURIComponent(dirlist[i]) %>"class="folder"><svg class="icons"aria-hidden="true"><use xlink:href="#directory_md"></use></svg><li class="folder"><div class="dirname"><%=dirnamelist[i]%></div><div class="filesize">—</div></li></a></div><%}%></ul><ul id='fileslist'><%for(var i=0;i<=fileslist.length-1;i++){%><div class='filesection'><a href="http://<%= dataip %>/filedownload?path=<%= encodeURIComponent(fileslist[i]) %>"class="folder"><svg class="icons"aria-hidden="true"><%var video_fliter=/\.mkv|mp4|flv|webv|m2ts|rmvb$/%><%var audio_fliter=/\.mp3|aac|flac|ogg|opus|aiff|alac|cue$/%><%var picture_fliter=/\.jpe?g|png|bmp|webp$/%><%var compress_fliter=/\.zip|rar|7z|\d{3}$/%><%var text_fliter=/\.txt|md|ini|json|cfg$/%><use xlink:href="<%if(video_fliter.test(extlist[i])){%><%="#ext-video"%><%}else if(audio_fliter.test(extlist[i])){%><%="#ext-audio"%><%}else if(picture_fliter.test(extlist[i])){%><%="#ext-picture"%><%}else if(text_fliter.test(extlist[i])){%><%="#ext-txt"%><%}else if(compress_fliter.test(extlist[i])){%><%="#ext-compress"%><%}else{%><%="#ext-unknown"%><%}%>"></use></svg><li class="file"><div class="filename"><%if(filenamelist[i].length>120){%><%var overflow=(filenamelist[i]).slice(0,120)%><%=`${overflow}...`%><%}else{%><%=filenamelist[i]%><%}%></div><div class="filesize"><%if(sizelist[i]<1024){%><%=`${sizelist[i]}B`%><%}else if(sizelist[i]<Math.pow(1024,2)){%><%=`${(sizelist[i]/1024).toFixed(2)}KB`%><%}else if(sizelist[i]<Math.pow(1024,3)){%><%=`${(sizelist[i]/Math.pow(1024,2)).toFixed(2)}MB`%><%}else{%><%=`${(sizelist[i]/Math.pow(1024,3)).toFixed(2)}GB`%><%}%></div></li></a></div><%}%></ul><div class="gap"></div></div></div><!--#ext-video--><div id="setting"style="visibility:hidden;"><div id="viewSetting"><a href="/view/<% if(view=="gridview"){%><%="listview"%><%}else{%><%="gridview"%><%}%>"><div class='button_BG'><div id="grid_view"><img src="/images/svg/gridview.svg"></img></div><div id="list_view"><img src="/images/svg/listview.svg"></img></div></div></a></div><div id="uploadSetting"onclick="showUploadContainer()"><a><div class='button_BG'id='uploadButton'><img src="/images/svg/uploadButton.svg"></div></a></div></div>图标展示框<svg class="showIcon"aria-hidden="true"><use xlink:href="#ext-video"></use></svg><svg class="showIcon"aria-hidden="true"><use xlink:href="#ext-txt"></use></svg><svg class="showIcon"aria-hidden="true"><use xlink:href="#ext-xls"></use></svg><svg class="showIcon"aria-hidden="true"><use xlink:href="#ext-ppt"></use></svg><svg class="showIcon"aria-hidden="true"><use xlink:href="#ext-picture"></use></svg><svg class="showIcon"aria-hidden="true"><use xlink:href="#ext-compress"></use></svg><svg class="showIcon"aria-hidden="true"><use xlink:href="#ext-unknown"></use></svg><svg class="showIcon"aria-hidden="true"><use xlink:href="#directory"></use></svg><svg class="showIcon"aria-hidden="true"><use xlink:href="#directory_md"></use></svg><div class="FooterToast"style="visibility:hidden;bottom: 20%;">Sample message</div></body></html>
