--- a/public/stylesheets/file.css
+++ b/public/stylesheets/file.css
@@ -3,6 +3,10 @@
     padding: 0;
  }
 
+* {
+    font-size: clamp(12px, calc(7px + 0.390625vw), 24px);
+}
+
  ul {
      padding: 0;
      list-style: none;
